pamc/src/tests/sample_code/should_fail/multi_file/type_check/leaky_let_type/src/mod.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

use Nat.*;

pub let _2 = S(S(O));
